--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-# Caminho do banco SQLite (será criado na raiz do projeto)
-spring.datasource.url=jdbc:sqlite:meubanco.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+# Habilita o console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# Dialeto customizado para SQLite (veja abaixo)
-spring.jpa.database-platform=com.seuprojeto.config.SQLiteDialect
+# Configurações do datasource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# Geração do esquema
+# Configurações do JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-# Mostrar SQL
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
